# YPP_Shop_Manager

./: .gitignore  CMakeLists.txt  FileList.cmake  GenerateVersionHeader.cmake  PrintVersion.cmake  README.md
doc/: CMakeLists.txt  Doxyfile.in
include/: AKeyable.h  CDataBase.h  CKeyItem.h  CKeySets.h  CPrices.h  CPricesTable.h  CProductPrice.h  CProductPrices.h  CRecipe.h  CRecipeItem.h  CRecipes.h  Config.h.in  ExceptionUtils.h  IDescriptable.h  IJsonable.h  JsonUtils.h  NumberUtils.h
include/frontend/: CInputArguments.h  CKeySetsMenuSelector.h  CMainMenuSelector.h  CSetMenuSelector.h  IMenuSelector.h  InputUtils.h
include/traits/: CDataBase.h  CPrices.h  CPricesTable.h  CRecipe.h  CRecipeItem.h  CRecipes.h  default.h  json.h
include/types/: AKeyable.h  CDataBase.h  CKeySets.h  CPrices.h  CPricesTable.h  CProductPrice.h  CRecipe.h  CRecipeItem.h  CRecipes.h  IJsonable.h
src/: AKeyable.cpp  CDataBase.cpp  CPrices.cpp  CPricesTable.cpp  CProductPrice.cpp  CProductPrices.cpp  CRecipe.cpp  CRecipeItem.cpp  CRecipes.cpp  IDescriptable.cpp  IJsonable.cpp
src/frontend/: CInputArguments.cpp  CMainMenuSelector.cpp  IMenuSelector.cpp  InputUtils.cpp  YPP_Shop_Manager.cpp
tests/: ATest.cpp  ATest.h  CMakeLists.txt  FileList.cmake
tests/unit/: TAKeyable.cpp  TDataBase.cpp  TKeyItem.cpp  TKeySets.cpp  TPrices.cpp  TPricesTable.cpp  TProductPrice.cpp  TProductPrices.cpp  TRecipe.cpp  TRecipeItem.cpp  TRecipes.cpp  blackthorpe.json
